comment out no background repeat to prevent white space at page bottom

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	/* background-color: rgb(83, 3, 83); */
 	background-image: url("https://images.pexels.com/photos/3214110/pexels-photo-3214110.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-	background-repeat: no-repeat;
+	/* background-repeat: no-repeat; */
 	background-size:cover;
 	align-items: center;
 	justify-content: center;
